# bkpir

./: CMakeLists.txt  LICENSE  README.md  bkpirl_and.cpp  bkpirl_not.cpp  bkpirl_or.cpp  bkpirl_single.cpp  database.cpp  database.h  main.cpp  main.h  mmkpirl.cpp  utils.cpp  utils.h
scripts/: README.md  exp_table1.sh  exp_table2.sh  exp_table3.sh  exp_table4.sh  exp_table5.sh  exp_table6.sh  exp_table7.sh
